--- a/templates/glasanje.html
+++ b/templates/glasanje.html
@@ -61,7 +61,7 @@
           
                 <div class="container">
                   <select id="kand" name="kand" class="form-select" aria-label="Default select example">
-                    <option selected> Izaberite željenog kandidata </option>
+                    <option selected>Изаберите жељеног кандидата</option>
                     {% for k in kandidati %}
                       <option value='{{ k }}'>{{ k }}</option>
                     {% endfor %}
