--- a/templates/check.html
+++ b/templates/check.html
@@ -18,11 +18,11 @@
                 </div>
                 <div class="form-group">
                     <label for="title">Број личне карте:</label>
-                    <input type="text" class="form-control" id="title" name="blk" placeholder="Unesite korisničko ime" required>
+                    <input type="text" class="form-control" id="title" name="blk" placeholder="Унесите број личне карте" required>
                 </div>
                 <div class="form-group">
                     <label for="title">ЈМБГ:</label>
-                    <input type="text" class="form-control" id="title2" name="jmbg" placeholder="Unesite šifru" required>
+                    <input type="text" class="form-control" id="title2" name="jmbg" placeholder="Унесите матични број" required>
                 </div>
                 <div style="text-align: center;">
                     <button type="submit" class="btn btn-primary">Покрени гласање</button>      
