--- a/templates/glasanje.html
+++ b/templates/glasanje.html
@@ -57,7 +57,7 @@
           <div id="main">  
 
             <form action="/glasanje" method="post">
-                <h1>Dobrodosli na izbore</h1>              
+                <h1>Добродошли на сајт гласања</h1>              
           
                 <div class="container">
                   <select id="kand" name="kand" class="form-select" aria-label="Default select example">
@@ -69,7 +69,7 @@
                   <br>               
                   
                 </div>
-              <button type="submit">Posalji glas</button>
+              <button type="submit">Пошаљи глас</button>
             </form>
           </div>
     </body>
