--- a/templates/proba.html
+++ b/templates/proba.html
@@ -3,16 +3,16 @@
 {% block content %}
 <div  style="background-color: #e3f2fd; padding: 20px; margin-bottom: 20px; width: 95%; margin: auto;">
 
-  <a  style="padding-right: 10px; text-decoration: none; color: #7c795d;">Rezultati</a>
-  <a href="/logout" style="padding-right: 10px; float: right; text-decoration: none; color: #7c795d;">Odjava</a>
+  <a  style="padding-right: 10px; text-decoration: none; color: #7c795d;">Резултати</a>
+  <a href="/logout" style="padding-right: 10px; float: right; text-decoration: none; color: #7c795d;">Одјава</a>
      
 </div> 
 <div class="container justify-content-center" style="margin-top: 30px;">
   <div class="row">
     <div class="col-lg-12">
       <div class="jumbotron text-center">
-        <h2>Pobednik na izborima je {{ res['pobednik'] }}</h2>
-        <p>Rezultate mozete videti ispod</p>
+        <h2>Победник на изборима је {{ res['pobednik'] }}</h2>
+        <p>Резултате можете видети испод</p>
       </div>
     </div>
   </div>
@@ -25,8 +25,8 @@
                 <thead>
                     <tr>
                       <th scope="col"></th>
-                      <th scope="col">Naziv kandidata</th>
-                      <th scope="col">Broj glasova</th>
+                      <th scope="col">Назив кандидата</th>
+                      <th scope="col">Број гласовa</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -45,23 +45,6 @@
     
     <div class="col"></div>    
   </div>
-  <!--<div class="row mb-3">
-      <div class="col"></div>
-      <div class="col-lg-6" >
-        <div class="card">
-            <div class="card-header">
-            <h5 class="card-title">mile</h5>
-            </div>
-            <div class="card-body">
-               <p> <a href="">23</a></p>
-               <p> <a href="">23</a></p>
-               <p> <a href="">23</a></p>
-            </div>
-        </div>
-      </div> 
-      
-      <div class="col"></div>    
-  </div> -->
  
 </div>
 
