--- a/templates/resultat.html
+++ b/templates/resultat.html
@@ -67,7 +67,7 @@
             <form action="/novi_token" method="post">
                 <h1>{{ token }} </h1>              
               <div style="text-align: center;">
-                <a href="../novi_token">Generisi novi token</button>
+                <a href="../novi_token">Генериши нови токен</button>
               </div>
             </form>
           </div>
