--- a/templates/unosTokena.html
+++ b/templates/unosTokena.html
@@ -59,21 +59,21 @@
     <body>       
           <div  style="background-color: #e3f2fd; padding: 20px; margin-bottom: 20px; width: 60%; margin: auto;">
 
-            <a  style="padding-right: 10px; text-decoration: none; color: #7c795d;">Rezultati</a>
-            <a href="/logout" style="padding-right: 10px; float: right; text-decoration: none; color: #7c795d;">Odjava</a>
+            <a  style="padding-right: 10px; text-decoration: none; color: #7c795d;">Резултати</a>
+            <a href="/logout" style="padding-right: 10px; float: right; text-decoration: none; color: #7c795d;">Одјава</a>
               
           </div>  
           <div id="main">  
 
             <form action="/unos_tokena" method="post">
-                <h1>Dobrodosli na izbore</h1>             
+                <h1>Добродошли на гласању</h1>             
           
               <div class="container">
                 <span> {{ poruka }}</span><br><br>
-                <input type="text" id="token" name="token" placeholder="Unesite ovde vas token">            
+                <input type="text" id="token" name="token" placeholder="Унесите ваш токен овде">            
                 
               </div>
-              <button type="submit">Pokreni glasanje</button>
+              <button type="submit">Покрени гласање</button>
             </form>
           </div>
     </body>
